--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </header>
     <main class="container">
         <div class="row m-auuto">
+            <!-- left block -->
             <div class="col-3">
                 <ul class="nav flex-column">
                     <li class="nav-item">
@@ -56,6 +57,7 @@
                     </li>
                   </ul>
             </div>
+            <!-- right block -->
             <div class="col-9">
                 <div class="row">
                     <nav aria-label="breadcrumb">
@@ -169,10 +171,8 @@
                         </div>
                       </div>
                 </div>
-                </div>
-
                 
-                <div class="row">
+                 <div class="row">
                     <nav aria-label="...">
                         <ul class="pagination">
                           <li class="page-item disabled">
@@ -191,7 +191,7 @@
                 </div>
             </div>
            
-          </div>
+          </div> 
 
     </main>
   
