--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     </nav>
                 </div>
                 <!-- using Card -->
-                <div class="row">
-                    <div class="card m-2" style="width: 16rem;">
+                <div class="row lg">
+                    <div class="card m-2 card-md-auto" style="width: 16rem;">
                         <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -96,7 +96,7 @@
                         </div>
                     </div>
 
-                    <div class="card m-2" style="width: 16rem;">
+                    <div class="card m-2 card-md-auto" style="width: 16rem;">
                         <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -214,6 +214,20 @@
 
     </main>
 <footer>
+<div class="row">
+    <div class="col-8">
+        <ul>
+            <li>item1</li>
+            <li>item2</li>
+            <li>item3</li>
+            <li>item4</li>
+            <li>item5</li>
+        </ul>
+    </div>
+    <div class="col-4">
+        <div  class="mapouter p-10"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=IT Step Рівне&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://piratebay-proxys.com/">Piratebay</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
+    </div>
+</div>
 
     
 </footer>
